2013-10-09  Anton Kolesov <Anton.Kolesov@synopsys.com>

	* dejagnu/nsim-extra.exp: Fix long-standing issue of constant nsim_gdb
	reboots. It was caused because output buffer of nsim_gdb created by Expect
	was overflown and nsim_gdb couldn't write anything to eat, thus it was
	stuck in some "print" operation. I am not completely aware of mechanics of
	those buffers it seems that overflow was happening way after Expect
	maximum buffer length exceed, so if this observation is right, then Expect
	at first was dropping nsim_gdb output to maintain buffer size, but then it
	was stopping doing this, thus causing an overflow. We do not care about
	nsim_gdb output so we can safely redirect it to /dev/null. Has to use
	shell for this, because Expect's spawn doesn't know about stream
	redirection.

2013-10-09  Anton Kolesov <Anton.Kolesov@synopsys.com>

	* dejagnu/baseboards/arc-nsim.exp, arc-sim.exp: Update baremetal board
	definitions: disable HW watchpoints, on nSIM reload image each time before
	running.

2013-09-30  Anton Kolesov <akolesov@synopsys.com>

	* rel-rpaths.sh: Check that uClibc libc.so file exists before trying to
	update it. Otherwise script fails for elf32-only toolchain build.

2013-09-26  Anton Kolesov <akolesov@synopsys.com>

	* arc-versions.sh: Fix double usage of same variable name for different
	purposes, leading to incorrect behaviour.

2013-09-16  Anton Kolesov <akolesov@synopsys.com>

	* build-all.sh: Add option --[no-]strip to strip host binaries from symbols.
	* build-elf32.sh: Use HOST_INSTALL env variable to define which target to
	use to install on host. Should be either `install' or `install-strip'.
	* build-uclibc.sh: Likewise.

2013-09-11  Anton Kolesov <akolesov@synopsys.com>

	* dejagnu/baseboard/arc-nsim.exp: Correct configuration for GDB testsuite
	on nSIM.

2013-09-10  Anton Kolesov <akolesov@synopsys.com>

	* dejagnu/baseboard/arc-nsim.exp: Do not use status wrapper (testglue) for
	Dejagnu tests.